--- a/index.html
+++ b/index.html
@@ -1,28 +1,101 @@
 <!DOCTYPE html>
-<html lang=en>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        />
-        <link
-          rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-          crossorigin="anonymous"
-        />
-        <link
-          href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-          rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <title>Weather App</title>
-    </head>
+<html lang="en">
 
-    <body>
-        <script src="assets/js/script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Weather Dashboard</title>
+</head>
+
+<body>
+
+    <header class="bg-dark text-white">
+        <h1 class="p-4 text-center">Weather Dashboard</h1>
+    </header>
+
+    <main class="row d-flex">
+
+        <!-- left column -->
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <h2 class="card-header">Search for a City: </h2>
+                <form id="city-search" class="col-12 card-body">
+                    <input name="city" id="city" class="form-input col-12" placeholder="type name of city here" />
+                    <button type="submit" class="btn btn-dark col-12"> Search </button>
+                </form>
+            </div>
+
+            <div id="search-history">
+            </div>
+        </div>
+
+        <!-- right column-->
+        <div class="col-12 col-md-8">
+            <div id="current-city-container">
+                <h2 class="current-city"></h2>
+                <div>
+                    <p class="current-temp"></p>
+                    <p class="current-wind"></p>
+                    <p class="current-humidity"></p>
+                    <p class="current-uv"></p>
+                </div>
+            </div>
+
+            <div id="forcast-container">
+                <h3 id="title"></h3>
+                <div class="row">
+                    <div id="day1" class="col-12 col-md-2">
+                        <p class="date"></p>
+                        <img class="weather-icon">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
+                    </div>
+
+                    <div id="day2" class="col-12 col-md-2">
+                        <p class="date"></p>
+                        <img class="weather-icon">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
+                    </div>
+
+                    <div id="day3" class="col-12 col-md-2">
+                        <p class="date"></p>
+                        <img class="weather-icon">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
+                    </div>
+
+                    <div id="day4" class="col-12 col-md-2">
+                        <p class="date"></p>
+                        <img class="weather-icon">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
+                    </div>
+
+                    <div id="day5" class="col-12 col-md-2">
+                        <p class="date"></p>
+                        <img class="weather-icon">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+
+    <script src="./assets/js/script.js"></script>
+
+</body>
+
 </html>
