--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="bg-dark text-white">
-        <h1 class="p-4 text-center">Weather Dashboard</h1>
+        <h1 class="p-4 text-center">City Weather Dashboard</h1>
     </header>
 
     <main class="row d-flex">
@@ -23,7 +23,7 @@
             <div class="card">
                 <h2 class="card-header">Search for a City: </h2>
                 <form id="city-search" class="col-12 card-body">
-                    <input name="city" id="city" class="form-input col-12" placeholder="type name of city here" />
+                    <input name="city" id="city" class="form-input col-12" placeholder="Type name of city here..." />
                     <button type="submit" class="btn btn-dark col-12"> Search </button>
                 </form>
             </div>
