--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <div class="card">
                   <h2 class="card-header">Search a City: </h2>
                   <form id="city-search" class="col-12 card-body">
-                      <input name="city" id="city" class="form-input col-12" placeholder="Type name of city here..." />
+                      <input name="city" id="city" class="form-input col-12" placeholder="Type the name of a city here..." />
                       <button type="submit" class="btn btn-dark col-12"> Search </button>
                   </form>
               </div>
@@ -34,7 +34,7 @@
 
           <!-- right column-->
           <div class="col-12 col-md-8">
-              <div id="current-city-container">
+              <div id="current-container">
                   <h2 class="current-city"></h2>
                   <div>
                       <p class="current-temp"></p>
