fixed naming issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="col-12 col-md-4">
               <div class="card">
                   <h2 class="card-header">Search a City Forecast:</h2>
-                  <form id="city-search" class="col-12 card-body">
+                  <form id="city-form" class="col-12 card-body">
                       <input name="city" id="userInput" class="form-input col-12" placeholder="Type the name of a city here..." />
                       <button type="submit" class="btn btn-dark col-12"> Search </button>
                   </form>
